--- a/app/src/main/res/layout/chat_message_recycler_row.xml
+++ b/app/src/main/res/layout/chat_message_recycler_row.xml
@@ -1,14 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
+    <!-- Left Chat Bubble (Receiver) -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_rounded_corner"
-        android:backgroundTint="@color/chat_color_sender"
+        android:backgroundTint="@color/chat_color_receiver"
+        android:layout_alignParentStart="true"
         android:padding="8dp"
         android:layout_marginEnd="80dp"
         android:id="@+id/left_chat_layout"
@@ -20,22 +21,44 @@
             android:textSize="18sp"
             android:text="Hello"
             android:id="@+id/left_chat_textview"/>
+        <!-- Receiver Timestamp -->
+        <TextView
+            android:id="@+id/left_chat_timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:textColor="@color/white"
+            android:layout_gravity="left"
+            android:paddingTop="4dp"/>
     </LinearLayout>
+
+    <!-- Right Chat Bubble (Sender) -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_rounded_corner"
-        android:backgroundTint="@color/chat_color_receiver"
+        android:backgroundTint="@color/chat_color_sender"
         android:layout_alignParentEnd="true"
         android:padding="8dp"
+        android:orientation="vertical"
         android:layout_marginStart="80dp"
         android:id="@+id/right_chat_layout">
         <TextView
+            android:text="Hello"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:id="@+id/right_chat_textview"/>
+        <!-- Sender Timestamp -->
+        <TextView
+            android:id="@+id/right_chat_timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:textColor="@color/white"
+            android:layout_gravity="right"
+            android:paddingTop="4dp"/>
     </LinearLayout>
 
 </RelativeLayout>
