--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- Main Content -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/my_primary"
-        android:padding="10dp"
-        android:id="@+id/main_toolbar">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/toolbar_title"
-            android:layout_width="wrap_content"
+        <!-- Custom Toolbar (RelativeLayout with ImageButton for Hamburger Icon) -->
+        <RelativeLayout
+            android:id="@+id/main_toolbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:layout_marginStart="10dp"
-            android:layout_centerVertical="true"/>
+            android:background="@color/my_primary"
+            android:padding="10dp"
+            android:layout_alignParentTop="true">
 
-        <ImageButton
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/icon_search"
-            android:layout_alignParentEnd="true"
+            <ImageButton
+                android:id="@+id/toolbar_hamburger"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:tint="@color/white"
+                android:src="@drawable/ic_menu"
+                android:background="@android:color/transparent"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"/>
+
+            <!-- Toolbar Title -->
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:layout_marginStart="50dp"
+                android:layout_centerVertical="true"/>
+
+            <!-- Search Button -->
+            <ImageButton
+                android:id="@+id/main_search_btn"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/icon_search"
+                android:layout_alignParentEnd="true"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                app:tint="@color/white"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"/>
+
+        </RelativeLayout>
+
+        <!-- Main Frame Layout (for replacing fragments) -->
+        <FrameLayout
+            android:id="@+id/main_frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/main_toolbar"
+            android:layout_above="@id/divider"/>
+
+        <!-- Divider -->
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_above="@id/bottom_navigation" />
+
+        <!-- Bottom Navigation -->
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:background="?attr/selectableItemBackgroundBorderless"
-            app:tint="@color/white"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="10dp"
-            android:id="@+id/main_search_btn"/>
+            app:menu="@menu/bottom_navigation_menu"/>
 
     </RelativeLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <!-- Navigation Drawer -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_below="@id/main_toolbar"
-        android:layout_above="@id/divider"
-        android:id="@+id/main_frame_layout"/>
+        android:layout_gravity="start"
+        app:menu="@menu/navigation_menu"
+        app:headerLayout="@layout/nav_header"/>
 
-    <com.google.android.material.divider.MaterialDivider
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_above="@id/bottom_navigation"
-        android:id="@+id/divider"/>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:id="@+id/bottom_navigation"
-        app:menu="@menu/bottom_navigation_menu"/>
-
-
-
-
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
