--- a/app/src/main/res/layout/chat_message_recycler_row.xml
+++ b/app/src/main/res/layout/chat_message_recycler_row.xml
@@ -14,6 +14,29 @@
         android:layout_marginEnd="80dp"
         android:id="@+id/left_chat_layout"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/img_gr"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/person_icon"
+                android:background="@drawable/circular_bg"
+                android:backgroundTint="@color/my_primary"
+                android:scaleType="centerCrop"
+                />
+            <TextView
+                android:id="@+id/user_gr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="username"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:padding="2dp"
+                />
+        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,7 +65,33 @@
         android:padding="8dp"
         android:orientation="vertical"
         android:layout_marginStart="80dp"
-        android:id="@+id/right_chat_layout">
+        android:id="@+id/right_chat_layout"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="end">
+
+            <TextView
+                android:id="@+id/user_bl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="username"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:padding="2dp"
+                />
+            <ImageView
+                android:id="@+id/img_bl"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/person_icon"
+                android:background="@drawable/circular_bg"
+                android:backgroundTint="@color/my_primary"
+                android:scaleType="centerCrop"
+                />
+        </LinearLayout>
         <TextView
             android:text="Hello"
             android:layout_width="wrap_content"
