--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
-
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:orientation="vertical">
         <!-- Font Size Setting -->
         <TextView
             android:layout_width="wrap_content"
@@ -25,16 +26,30 @@
             android:background="@drawable/edit_text_rounded_corner"
             android:padding="12dp"
             android:layout_margin="10dp"/>
-
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_set_wallpaper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Set Chat Wallpaper"
+            android:background="@drawable/edit_text_rounded_corner"
+            android:backgroundTint="@color/my_primary"
+            android:textColor="@color/white"
+            android:padding="12dp"
+            android:elevation="12dp"
+            android:layout_margin="10dp"
+            android:layout_marginTop="16dp" />
+        </LinearLayout>
         <!-- Save Button -->
         <Button
-            android:elevation="10dp"
+            android:layout_margin="2dp"
+            android:elevation="12dp"
             android:id="@+id/button_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Save"
             android:background="@drawable/btn_rounded_corner"
             android:padding="12dp"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="16dp"
+            />
     </LinearLayout>
-</ScrollView>
+
