--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="my_primary">#3F51B5</color>
-    <color name="my_secondary"> #FF9800</color>
+    <color name="my_primary">#FF9800</color>
+    <color name="my_secondary"> #FF5722</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
