--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -21,15 +21,12 @@
             android:layout_gravity="center"/>
 
     </androidx.appcompat.widget.Toolbar>
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
 
         <!-- App Name and Version -->
         <TextView
@@ -107,5 +104,4 @@
 
 
     </LinearLayout>
-</ScrollView>
 </LinearLayout>
