--- a/app/src/main/res/layout/activity_login_phone_number.xml
+++ b/app/src/main/res/layout/activity_login_phone_number.xml
@@ -93,7 +93,10 @@
             app:ccp_showFlag="false"
             app:ccp_showNameCode="false"
             app:ccp_defaultPhoneCode="92"
-            android:id="@+id/login_countrycode"/>
+            android:id="@+id/login_countrycode"
+            app:ccp_contentColor="@color/text_color"
+            app:ccpDialog_textColor="@color/text_color"
+          />
 
         <EditText
             android:layout_width="match_parent"
