--- a/app/src/main/res/layout/activity_wallpaper.xml
+++ b/app/src/main/res/layout/activity_wallpaper.xml
@@ -44,4 +44,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_remove_wallpaper"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@drawable/btn_rounded_corner"
+        android:backgroundTint="@color/my_primary"
+        android:padding="12dp"
+        android:text="Remove Wallpaper"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@id/button_save_wallpaper"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
