--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -99,7 +99,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="16dp"
-            android:text="This app provides a seamless chat experience with features like..."
+            android:text="This app provides a seamless chat experience with features like...easy profile maintainence."
             android:textSize="16sp" />
 
 
