--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/toolbar_hamburger"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:tint="@color/white"
+                app:tint="@color/white"
                 android:src="@drawable/ic_menu"
                 android:background="@android:color/transparent"
                 android:layout_alignParentStart="true"
