--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,10 +14,11 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:src="@drawable/chat_icon"
-            app:tint="@color/my_secondary"/>
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/logo"
+
+            app:tint="@color/my_secondary" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
