--- a/app/src/main/res/layout/activity_search_user.xml
+++ b/app/src/main/res/layout/activity_search_user.xml
@@ -75,16 +75,17 @@
         android:id="@+id/search_user_recycler_view"
         />
 
+    <TextView
+        android:id="@+id/no_users_found_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/search_user_layout"
+        android:layout_centerInParent="true"
+        android:text="No users found!"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        android:gravity="center"
+        android:padding="16dp"/>
 
 </RelativeLayout>
-
-
-
-
-
-
-
-
-
-
-
