--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,18 +29,19 @@
         android:inputType="text"
         android:padding="10dp"
         android:visibility="visible" />
+
     <EditText
+        android:id="@+id/profile_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:hint="Phone"
-        android:inputType="text"
         android:layout_margin="10dp"
         android:background="@drawable/edit_text_rounded_corner"
         android:elevation="5dp"
-        android:enabled="false"
-        android:id="@+id/profile_phone"
-        />
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:padding="10dp"
+        android:visibility="visible"
+        android:enabled="false" />
 
     <LinearLayout
         android:layout_width="match_parent"
