--- a/app/src/main/res/layout/recent_chat_recycler_row.xml
+++ b/app/src/main/res/layout/recent_chat_recycler_row.xml
@@ -41,7 +41,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="+000000000000"
+            tools:text="Email"
             android:id="@+id/last_message_text"/>
     </LinearLayout>
-    </LinearLayout>
+</LinearLayout>
